# apertium-nob

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  apertium-nob.detriple.dix  apertium-nob.nob.acx  apertium-nob.nob.rlx  apertium-nob.nob.seg.rlx  apertium-nob.nob.syn.rlx  apertium-nob.pc.in  configure.ac  modes.xml  test-scandivoc
dev/: RL-non-scandi-props.sh  np-cgguess-freqs
dev/ordbanken/: README.org  bank2dix  config.sh  entries-from-missing  lm2par-bank  lm2par-dix  missing-ordbanken
test/: nob-disam-input.txt  nob-input.txt  tests.json
test/expected/: nob-disam-disam.txt  nob-disam-disam2.txt  nob-disam-morph.txt  nob-morph-expected.txt  nob-morph.txt
texts/: Stanisław_Lem.txt  ngrams.1  ngrams.2  ngrams.3  ngrams.4  ngrams.5  stanisław_lem.txt  udhr.txt
